[project]
name = "databricks-timeseries"
version = "0.1.0"
description = ""
authors = [
    {name = "mmaracic",email = "marijo.maracic@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ipykernel (>=7.0.1,<8.0.0)",
    "mlflow (>=3.5.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
